@@ -1,3 +1,7 @@
+2015-06-19  gepr  <gepr@tempusdictum.com>
+
+	* model/LocaleDyn.java (morbidity,controller): Promote from variables to 2nd class agents, slaves of their LocaleDyn Compartments.  They are inner classes only instantiated if the model calls setMorbidity() or setController().  They inherit their context from their LocaleDyn and are executed by LocaleDyn, even though they implement Steppable.
+
 2015-06-18  gepr  <gepr@tempusdictum.com>
 
 	* view/ObsMP.java (measure()): Call the new LooseDyn.countMP().
